# cait

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  sailfish.toml
.devcontainer/: Dockerfile
assets/: scroll-bottom.js  set-theme.js  styles.css  utils.css
llama-sys/: Cargo.toml  build.rs
src/: color_scheme.rs  component.rs  fake-messages.json  icon.rs  llama.rs  main.rs  page.rs  pages.rs  template.rs  templates.rs  theme.rs
templates/: app.css  app.html  app.stpl  global.css  hello.stpl
templates/chat/messages/: messages.stpl
templates/chats/: chats.stpl
templates/chats/chat-nav/: chat-nav.css  chat-nav.stpl
templates/chats/conversation/: conversation.html  conversation.stpl
templates/chats/conversation/input/: input.css  input.html  input.stpl
templates/chats/conversation/nav/: nav.css  nav.stpl
templates/chats/messages/: messages.css  messages.html  messages.stpl
templates/chats/search-bar/: search-bar.css  search-bar.html  search-bar.stpl
templates/navbar/: navbar.css  navbar.stpl
templates/settings/: settings.css  settings.html  settings.stpl
