[package]
name = "cait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-extra = { version = "0.7.5", features = ["cookie"] }
cookie = "0.17.0"
sailfish = "0.8.0"
maud = { version = "0.25.0", features = ["axum"] }


[build-dependencies]
walkdir = "2"
lightningcss = { version = "1.0.0-alpha.45", features = ["visitor"]}
regex = "1.9.1"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking"] }
cssparser = "0.29.1"
