[package]
name = "cait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-extra = { version = "0.8.0", features = ["cookie"] }
cookie = "0.17.0"
sailfish = "0.8.0"
maud = { version = "0.25.0", features = ["axum"] }
tracing-appender = "0.2.2"
futures = "0.3.28"
rand = "0.8.5"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.2.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.2.3" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.2.3" }
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.3.0"
tokenizers = { version = "0.14.0", features = ["onig"], default-features = false }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
accelerate-src = { version = "0.3.2", optional = true }
tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures-core = "0.3.28"
futures-util = "0.3.28"

[build-dependencies]
lightningcss = "1.0.0-alpha.45"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking"] }
walkdir = "2"
anyhow = { version = "1", features = ["backtrace"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
